提交设计模式、数据结构

--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <div id="loginBtn"></div>
+    <div style="position:absolute;background:blue" id="div">我是div</div>
 </body>
 <script src="./test.js"></script>
 </html>
